# kira_kv_engine

./: API.md  Cargo.toml  PGO.md  README.md
.cargo/: config.toml
examples/: million_build.rs  million_build_dynamic.rs  pgm_bench.rs  ptrhash_bench.rs
scripts/: pgo.ps1  pgo.sh
src/: aes_hash.rs  bdz.rs  block_bloom.rs  build_arena.rs  build_hasher.rs  build_pool.rs  builder.rs  canonical_hash.rs  compressed_pilots.rs  cpu.rs  dynamic_index.rs  elias_fano.rs  hash.rs  hot_tier_dynamic.rs  hugepage.rs  hybrid.rs  hybrid_engine.rs  hybrid_topology.rs  index.rs  lib.rs  mini_chd.rs  mmap_index.rs  mph_backend.rs  pgm.rs  pgm_u128.rs  ptrhash.rs  ptrhash25.rs  xor_filter.rs
src/hot_tier/: mod.rs
src/remap/: mod.rs
src/simd_hash/: aarch64.rs  mod.rs  scalar.rs  x86_64.rs
tests/: aes_hash.rs  block_bloom.rs  build_arena.rs  build_pool.rs  compressed_pilots.rs  dynamic_index.rs  elias_fano.rs  empty_input.rs  hugepage.rs  hybrid_engine.rs  mini_chd.rs  mmap_index.rs  pgm.rs  pgm_u128.rs  ptrhash25.rs  simd_hash.rs  space_saving.rs
