[package]
name = "kira_kv_engine"
version = "0.3.2"
edition = "2024"
license = "MIT"
description = "KV-storage engine based on minimal perfect hash functions with optional PGM indexing for Rust"
repository = "https://github.com/ARyaskov/kira_kv_engine"
homepage = "https://github.com/ARyaskov/kira_kv_engine"
documentation = "https://docs.rs/kira_kv_engine"
readme = "README.md"
keywords = ["hashing", "perfect-hash", "key-value", "storage", "pgm"]
categories = ["data-structures", "database"]


[features]
default = ["serde", "simd", "parallel", "pgm"]
serde = ["dep:serde", "dep:rkyv"]
simd = []
parallel = ["dep:rayon", "dep:core_affinity"]
pgm = []
avx512 = ["simd"]
unsafe_optimizations = []
bbhash = []

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
rkyv = { version = "0.7", features = ["validation"], optional = true }
rayon = { version = "1.11", optional = true }
core_affinity = { version = "0.8", optional = true }
wyhash = { version = "0.6"}
hashbrown = "0.16"
rand = "0.8.5"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug-assertions = false

[profile.bench]
inherits = "release"
debug = true

[profile.release-extreme]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = true
overflow-checks = false
